Set navbar links

--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="intention.html">
+    <link href="soak.html">
+    <link href="meditation.html">
   </head>
   <body>
     <header>
       <h1>The Sacred Soak</h1>
-      <p>[sākrəd sōk] <!--make italicized-->noun</p>
+      <p>[sākrəd sōk] <!--make italicized-->noun.</p>
       <p>A container to immerse yourself in the God within. </p>
       <button>Dive in</button>
+      <div>
+        <img src="">
+      </div>
+      <div>
+        <nav>
+            <ul>
+                <li<a href="intention.html">Intention</a></li>
+                <li><a href="soak.html">Soak</a></li>
+                <li><a href="meditation.html">Meditation</a></li>
+            </ul>
+        </nav>
+      </div>
     </header>
   </body>
 </html>
