Create parent and children divs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>A container to immerse yourself in the God within. </p>
       <button>Dive in</button>
       <div>
-        <img src="">
+        <img src="" id="logo" value="auto" width="">
       </div>
       <div>
         <nav>
@@ -27,6 +27,32 @@
                 <li><a href="meditation.html">Meditation</a></li>
             </ul>
         </nav>
+      </div>
+      <div>
+        <img src="" id="soak">
+      </div>
+      <div>
+        <div>
+            <h2>Elements</h2>
+        </div>
+        <div>
+            <p>1) Breathe.
+                <br>Taking 8 mindful deep breaths. Allowing your body to relax into the warm waters around you.
+                <img>
+            </p>
+            <p>2) Tap in.
+                <br>Open the door to yourself. What does that energy look like, feel like, sound like? 
+                <img>
+            </p>
+            <p>3) Listen.
+                <br> Allow this energetic expression of you to speak. String of consciousness that shit. Do not attempt to fight or guide any of these truths. Allow them to flow as if pouring watering into an empty glass.
+                <img>
+            </p>
+            <p>4) Accept.
+                <br> Be open to receiving these messages. How can you apply them to the context of this reality?
+                <img>
+            </p>
+        </div>
       </div>
     </header>
   </body>
