Finish layout htmltext

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       <div>
         <img src="" id="soak">
       </div>
-      <div>
+      <div class="container">
         <div>
             <h2>Elements</h2>
         </div>
         <div>
             <p>1) Breathe.
-                <br>Taking 8 mindful deep breaths. Allowing your body to relax into the warm waters around you.
+                <br>Take 8 mindful deep breaths. Allowing your body to relax into the warm waters around you.
                 <img>
             </p>
             <p>2) Tap in.
@@ -45,7 +45,7 @@
                 <img>
             </p>
             <p>3) Listen.
-                <br> Allow this energetic expression of you to speak. String of consciousness that shit. Do not attempt to fight or guide any of these truths. Allow them to flow as if pouring watering into an empty glass.
+                <br> Allow the energetic expression of you to speak. String of consciousness that shit. Do not attempt to fight or guide any of these truths. Allow them to flow as if pouring watering into an empty glass.
                 <img>
             </p>
             <p>4) Accept.
@@ -54,6 +54,16 @@
             </p>
         </div>
       </div>
+      <div>
+        <p><!--insert a quote here--></p>
+      </div>
+      <div>
+        <p>Inquire about more soul offerings</p>
+        <button>Dive in</button>
+      </div>
     </header>
+    <footer>
+        <p>Copyright @ The Sacred Soak</p>
+    </footer>
   </body>
 </html>
