Make <main> section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <body>
     <header>
       <h1>The Sacred Soak</h1>
-      <p>[sākrəd sōk] <!--make italicized-->noun.</p>
-      <p>A container to immerse yourself in the God within. </p>
+      <p><strong>[sākrəd sōk] <!--make italicized-->noun.</strong>
+        <br>A container to immerse yourself in the God within. 
+      </p>
       <button>Dive in</button>
       <div>
         <img src="" id="logo" value="auto" width="">
@@ -31,10 +32,9 @@
       <div>
         <img src="" id="soak">
       </div>
-      <div class="container">
-        <div>
+    </header>
+    <main class="container">
             <h2>Elements</h2>
-        </div>
         <div>
             <p>1) Breathe.
                 <br>Take 8 mindful deep breaths. Allowing your body to relax into the warm waters around you.
@@ -53,15 +53,14 @@
                 <img>
             </p>
         </div>
-      </div>
+      </main>
       <div>
-        <p><!--insert a quote here--></p>
+        <p><!--"You'e never more essentially yourself than when you are still. - Eckhart Tolle"--></p>
       </div>
       <div>
         <p>Inquire about more soul offerings</p>
         <button>Dive in</button>
       </div>
-    </header>
     <footer>
         <p>Copyright @ The Sacred Soak</p>
     </footer>
