Change p in header to h2

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <header>
       <h1>The Sacred Soak</h1>
-      <p><strong>[sākrəd sōk] <!--make italicized-->noun.</strong>
+      <h2><strong>[sākrəd sōk] <!--make italicized-->noun.</strong>
         <br>A container to immerse yourself in the God within. 
-      </p>
+      </h2>
       <button>Dive in</button>
       <div>
         <img src="" id="logo" value="auto" width="">
@@ -34,7 +34,7 @@
       </div>
     </header>
     <main class="container">
-            <h2>Elements</h2>
+            <h3>Elements</h3>
         <div>
             <p>1) Breathe.
                 <br>Take 8 mindful deep breaths. Allowing your body to relax into the warm waters around you.
