Create main body flexbox

--- a/index.html
+++ b/index.html
@@ -18,14 +18,26 @@
       </h2>
       <button>Dive in</button>
       <div>
-        <img src="" id="logo" value="auto" width="">
+        <img src="image/bathtub.jpg" id="logo" value="auto" width="">
       </div>
       <div>
         <nav>
-            <ul>
-                <li<a href="intention.html">Intention</a></li>
-                <li><a href="soak.html">Soak</a></li>
-                <li><a href="meditation.html">Meditation</a></li>
+            <ul id="primary-navigation" class="primary-navigation flex">
+                <li class="active">
+                  <a href="intention.html">
+                    <span aria-hidden="true">Intention</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="soak.html">
+                    <span aria-hidden="true">Soak</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="meditation.html">
+                    <span aria-hidden="true">Meditation</span>
+                  </a>
+                </li>
             </ul>
         </nav>
       </div>
@@ -33,29 +45,37 @@
         <img src="" id="soak">
       </div>
     </header>
-    <main class="container">
+    <main>
             <h3>Elements</h3>
-        <div>
-            <p>1) Breathe.
+        <div class="flexbox-container">
+          <div class="flexbox-item flexbox-item-1">
+            <p class="element">1) Breathe.
                 <br>Take 8 mindful deep breaths. Allowing your body to relax into the warm waters around you.
-                <img>
+                <img src="" alt="">
             </p>
-            <p>2) Tap in.
+          </div>
+          <div class="flexbox-item flexbox-item-2">
+            <p class="element">2) Tap in.
                 <br>Open the door to yourself. What does that energy look like, feel like, sound like? 
-                <img>
+                <img src="" alt="">
             </p>
-            <p>3) Listen.
+          </div>
+          <div class="flexbox-item flexbox-item-3">
+            <p class="element">3) Listen.
                 <br> Allow the energetic expression of you to speak. String of consciousness that shit. Do not attempt to fight or guide any of these truths. Allow them to flow as if pouring watering into an empty glass.
-                <img>
+                <img src="" alt="">
             </p>
-            <p>4) Accept.
+          </div>
+          <div class="flexbox-item flexbox-item-4">
+            <p class="element">4) Accept.
                 <br> Be open to receiving these messages. How can you apply them to the context of this reality?
-                <img>
+                <img src="" alt="">
             </p>
+          </div>
         </div>
       </main>
       <div>
-        <p><!--"You'e never more essentially yourself than when you are still. - Eckhart Tolle"--></p>
+        <p><!--"You're never more essentially yourself than when you are still. - Eckhart Tolle"--></p>
       </div>
       <div>
         <p>Inquire about more soul offerings</p>
