Add photos to Elements

--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
           <div class="flexbox-item flexbox-item-1">
             <p class="element">1) Breathe.
                 <br>Take 8 mindful deep breaths. Allowing your body to relax into the warm waters around you.
-                <img src="" alt="">
+                <img src="image/breathe.jpg" alt="" width="300px" height="200px">
             </p>
           </div>
           <div class="flexbox-item flexbox-item-2">
             <p class="element">2) Tap in.
                 <br>Open the door to yourself. What does that energy look like, feel like, sound like? 
-                <img src="" alt="">
+                <img src="image/doorway.jpg" alt="" width="300px" height="200px">
             </p>
           </div>
           <div class="flexbox-item flexbox-item-3">
             <p class="element">3) Listen.
                 <br> Allow the energetic expression of you to speak. String of consciousness that shit. Do not attempt to fight or guide any of these truths. Allow them to flow as if pouring watering into an empty glass.
-                <img src="" alt="">
+                <img src="image/listen.jpg" alt="" width="300px" height="200px">
             </p>
           </div>
           <div class="flexbox-item flexbox-item-4">
             <p class="element">4) Accept.
                 <br> Be open to receiving these messages. How can you apply them to the context of this reality?
-                <img src="" alt="">
+                <img src="image/receive.jpg" alt="" width="300px" height="200px">
             </p>
           </div>
         </div>
